--- a/app/partials/directives/ms-find-gcf.html
+++ b/app/partials/directives/ms-find-gcf.html
@@ -5,7 +5,7 @@
         	<td ng-repeat='(key, value) in numberObjects'>
             	<!--{{key}}{{value.numbers}}-->
                 <table class=factors>
-                    <tr ng-repeat="step in value.completed" ng-class="borderIndexed($index)">
+                    <tr ng-repeat="step in value.completed" ng-class="borderIndexed($index, key)">
                         <td>
                         </td>
                         <td class=divisor>
@@ -15,7 +15,7 @@
                             <span ng-repeat="number in step.numbers" class=factoring>{{number}}</span>
                         </td>
                     </tr>
-                    <tr ng-class="borderOrNot()" ng-hide="allDone">
+                    <tr ng-class="borderOrNot(key)" ng-hide="allDone">
                         <td>
                            <span>&nbsp;</span>
                         </td>
