--- a/app/partials/directives/ms-find-gcf.html
+++ b/app/partials/directives/ms-find-gcf.html
@@ -32,7 +32,7 @@
             </tr>
         </table>
     </div>
-    <div ng-show="allDone">
+    <div ng-show="allDone" style="clear:left;">
         <div class=floatLeft>
             <span class=floatLeft>GCF</span><span class="bigger floatLeft"> &nbsp; =  &nbsp;</span><span class=floatLeft><ms-expression expected={{doneExp}} label="finalGcf"></ms-expression></span> 
         </div>
