z.1, all problems.  Added "fracNoMargin" and "bigger-not-margin" classes to permit tighter sign-fraction spacing

--- a/app/css/directives/ms-fraction.css
+++ b/app/css/directives/ms-fraction.css
@@ -1,6 +1,9 @@
 ms-fraction > table {
     margin: 0 7px;
 }
+.fracNoMargin ms-fraction > table {
+	margin: 0 1px;
+}
 .fraction td{
 	text-align:center;
 } 
