--- a/app/css/directives/ms-sign.css
+++ b/app/css/directives/ms-sign.css
@@ -2,6 +2,10 @@
     font-size: 125%;
     margin: 0 5px;
 }
+.bigger-not-margin {
+    font-size: 125%;
+    margin: 0 0px;
+}
 .margin-narrow{
     margin: 0 3.5px;
 }
