c.2, adjust spacing divisor/dividend

--- a/app/css/directives/ms-find-gcf.css
+++ b/app/css/directives/ms-find-gcf.css
@@ -11,7 +11,8 @@ ms-find-gcf .noborder .dividend {
     border: none;
 }
 ms-find-gcf .divisor {
-    padding: 10px 0 0 0;
+    padding: 10px 10px 0 0;
+	text-align:right;
 }
 ms-find-gcf input {
     width: 40px;
