J.1 correct answers stay lit up in green

--- a/app/partials/directives/ms-numberline.html
+++ b/app/partials/directives/ms-numberline.html
@@ -127,9 +127,9 @@ a[title]:after {
 		 <ul id="numid" ng-repeat="row in numArray">
 			<li class='{{row.className}}' style= "left:{{row.leftPosition +'%'}}" >{{row.val}}</li>
 		 </ul>
-		 <a class="ui-slider-handle ui-state-default ui-corner-all" href="#" style="left: 0%;" title="X"><span class="{{errorclassX}} "></span></a>
-		 <a class="ui-slider-handle ui-state-default ui-corner-all" href="#" style="left: 50%;" title="Y"><span class="{{errorclassY}} "></span></a>
-		 <a class="ui-slider-handle ui-state-default ui-corner-all" href="#" style="left: 100%;" title="Z"><span class="{{errorclassZ}} "></span></a>   
+		 <a class="ui-slider-handle ui-state-default ui-corner-all" href="#" style="left: 0%;" title="X"><span class="{{statusClassX}} "></span></a>
+		 <a class="ui-slider-handle ui-state-default ui-corner-all" href="#" style="left: 50%;" title="Y"><span class="{{statusClassY}} "></span></a>
+		 <a class="ui-slider-handle ui-state-default ui-corner-all" href="#" style="left: 100%;" title="Z"><span class="{{statusClassZ}} "></span></a>   
 	</div>
 	 
 </div>
