change titles i.2, i.3, new i.4 complete

--- a/app/css/directives/ms-group.css
+++ b/app/css/directives/ms-group.css
@@ -1,6 +1,9 @@
 ms-group td {
     padding: 0 5px;
 }
+.padLastZero ms-group td:last-child {
+    padding: 0;
+}
 ms-group ms-mixed-number td {
     padding: 0px;
 }
