--- a/app/partials/directives/ms-numberline.html
+++ b/app/partials/directives/ms-numberline.html
@@ -3,7 +3,10 @@
 #container{
 	padding:2em 1em;
 	margin-left:2em;
-	width:400px;
+	width:60%;
+}
+#container ul{
+	margin:0 0 0 25px;
 }
 #container li {
    position:relative;
@@ -11,17 +14,23 @@
 }
 #numid > li{
 	position:absolute;
-    margin-top:.6em; 
+    margin-top:1.6em; 
     font-size:.7em;  
 }
 #tickid > li{
    position:absolute; 
-   margin-top: -.93em; 
+   margin-top: -.5em; 
    color:#A09696;
    z-index:-1;
    margin-left:-.23em; 
 }
-
+#step-2 .feedbackwrapper{
+	margin-top:-3.5em;
+}
+#numberline2 {
+	margin-left: -1.5em;
+	width:150%;
+}
 /* Slider bar */
 .ui-slider-horizontal {
 	 height: .1em; 
@@ -114,12 +123,9 @@ a[title]:after {
 	height: 20px;
 	visibility: hidden;
 }
-.enlarge{
-	width:150%;
-}
 </style>
 <div id="container">	
-	<div id='{{numberlineId}}' class="enlarge" >
+	<div id='{{numberlineId}}'>
 		 <ul id="tickid" ng-repeat="row in tickArray">
 			<li style= "left:{{row.leftPosition +'%'}}" >|</li>
 		 </ul>
