--- a/app/css/directives/general.css
+++ b/app/css/directives/general.css
@@ -157,8 +157,14 @@ div.fakeButton {
 .margin_bottom_small {
 	margin-bottom:20px;
 }
+.margin-left-large {
+	  margin-left:220px;
+}
 .margin_top_small {
 	margin-top:20px;
+}
+.hiddenSpace {
+	visibility:hidden;
 }
 .tdButtonHeight > ms-expression > ms-row-group > table > tbody > tr > td {
 	height:60px;
