center numbers in fractions with negative numerators- min-width for fractions (hr style)- convert 372 problems with \\mixed{\\fracstr to \\mixed{\\str to avoid additional space suffix added by \\fracstr to negative numbers

--- a/app/css/directives/ms-fraction.css
+++ b/app/css/directives/ms-fraction.css
@@ -14,6 +14,7 @@ div .fraction .control-group {
 .fraction hr {
 	border-color: transparent transparent #515151 transparent;
 	height:1px;
+	min-width:1em;
 	padding:0px;
 	margin:0px;
 }
