--- a/app/partials/controllers/feedbackDiagnostic.html
+++ b/app/partials/controllers/feedbackDiagnostic.html
@@ -1,5 +1,5 @@
 <h1>Diagnostic</h1>
-<table class=table>
+<table class=table ng-hide="allCorrect">
     <tr>
         <th>Problem #</th>
         <th>Problem</th>
@@ -14,3 +14,5 @@
         <td>{{problemFeedback.result}}</td>
     </tr>
 </table>
+<br />
+<h4 class="help-answer-text" ng-show="allCorrect">The problem answers were all correct.</h4>
