--- a/app/partials/controllers/feedbackDiagnostic.html
+++ b/app/partials/controllers/feedbackDiagnostic.html
@@ -2,16 +2,16 @@
 <table class=table ng-hide="allCorrect">
     <tr>
         <th>Problem #</th>
-        <th>Problem</th>
-        <th>Provided Answer</th>
-        <th>Result</th>
+        <th>Answer Selected</th>
+        <!--<th>Result</th>-->
+        <th>Correct Answer</th>
     </tr>
     <!--<tr ng-repeat="problemFeedback in feedback" class={{rowClass(problemFeedback.result)}}>-->
     <tr ng-repeat="problemFeedback in feedback">
         <td>{{problemFeedback.problemNumber}}</td>
         <td><ms-expression expected={{problemFeedback.problem}}></ms-expression></td>
-        <td><ms-expression expected="{{problemFeedback.answer | replace:'input':'str' | replace:'but':'str' | checkbox2lbl | replace:'select':'str'}}"></ms-expression></td>
-        <td>{{problemFeedback.result}}</td>
+        <!--<td>{{problemFeedback.result}}</td>-->
+        <td><ms-expression expected="{{problemFeedback.correctLabel}}"></ms-expression></td>
     </tr>
 </table>
 <br />
