--- a/app/partials/controllers/feedbackDiagnostic.html
+++ b/app/partials/controllers/feedbackDiagnostic.html
@@ -2,6 +2,7 @@
 <table class=table ng-hide="allCorrect">
     <tr>
         <th>Problem #</th>
+        <th>Problem</th>
         <th>Answer Selected</th>
         <!--<th>Result</th>-->
         <th>Correct Answer</th>
@@ -10,6 +11,7 @@
     <tr ng-repeat="problemFeedback in feedback">
         <td>{{problemFeedback.problemNumber}}</td>
         <td><ms-expression expected={{problemFeedback.problem}}></ms-expression></td>
+        <td><ms-expression expected={{problemFeedback.answer}}></ms-expression></td>
         <!--<td>{{problemFeedback.result}}</td>-->
         <td><ms-expression expected="{{problemFeedback.correctLabel}}"></ms-expression></td>
     </tr>
