diagnostic, change titles

--- a/app/partials/controllers/feedbackDiagnostic.html
+++ b/app/partials/controllers/feedbackDiagnostic.html
@@ -2,8 +2,8 @@
 <table class=table ng-hide="allCorrect">
     <tr>
         <th>Problem #</th>
-        <th>Problem</th>
-        <th>Answer Selected</th>
+        <th>Problem/Answer</th>
+        <th></th>
         <!--<th>Result</th>-->
         <th>Correct Answer</th>
     </tr>
