diagnostic, add bootstrap table-condensed style

--- a/app/partials/controllers/feedbackDiagnostic.html
+++ b/app/partials/controllers/feedbackDiagnostic.html
@@ -1,5 +1,5 @@
 <h1>Diagnostic</h1>
-<table class=table ng-hide="allCorrect">
+<table class="table table-condensed" ng-hide="allCorrect">
     <tr>
         <th>Problem #</th>
         <th>Problem</th>
