--- a/app/css/directives/ms-div-wholes.css
+++ b/app/css/directives/ms-div-wholes.css
@@ -62,6 +62,19 @@
     position: relative;
     left: -14px;
 }
+
+.dividendstyleSmall {
+    border-top: 2px solid black;
+    padding: 2px 8px 4px 18px;
+    position: relative;
+    left: -10px;
+}
+
+.divisorstyleSmall {
+    border-right: 2px solid black;
+    padding: 2px 8px 0px 0px;
+    border-radius: 0 6px 6px 0;
+}
 /* tableCollapseStyle class allows border-radius us in ms-long-division.html*/
 .table-collapse-separate {
 	border-collapse:separate;
