add class "large"; change + class in 4.2, 11.2, and n.1 to "large"

--- a/app/css/directives/general.css
+++ b/app/css/directives/general.css
@@ -246,6 +246,9 @@ ul.nav-list li {
 button.btn {
 	font-size:75%;
 }
+button.btn.btn-.large {
+	font-size:110%;
+}
 button.btn.btn-.bigger {
 	font-size:125%;
 }
