--- a/app/css/directives/general.css
+++ b/app/css/directives/general.css
@@ -44,6 +44,13 @@ body {
 	margin-left:80px;
 }
 
+.exponentLarge {
+	display: inline-block;
+	height: 2em;
+	vertical-align:top;
+	font-size:125%;
+}
+
 .fixBottomRight {
 	position:fixed;
 	bottom:0;
