--- a/app/css/directives/ms-button.css
+++ b/app/css/directives/ms-button.css
@@ -4,3 +4,19 @@
 	width: 160px;
 	padding-left:16px;
 }
+
+.ms-order-ops-simple ms-btn td {
+	text-align:center;
+	width:12px;
+	height:20px;
+} 
+
+.specialHR {
+	border-color: transparent transparent #515151 transparent;
+	height:1px;
+	min-width:1em;
+	padding:0px;
+	margin:0px;
+}
+
+
