cleanup 4.2 & 11.1, modifications to ms-order-operations-simple.js to account for styling differences between operators, ms-order-operations-simple.css min-width for butons

--- a/app/css/directives/ms-order-operations-simple.css
+++ b/app/css/directives/ms-order-operations-simple.css
@@ -19,6 +19,7 @@
 }
 .ms-order-ops-simple button.btn {
 	font-size:110%;
+	min-width:50px;
 }
 .ms-order-ops-simple hr {
 	border-bottom: 1px solid;
