fractions.css, padding for exponent tag in fraction; o.2.1, complete

--- a/app/css/directives/ms-fraction.css
+++ b/app/css/directives/ms-fraction.css
@@ -35,3 +35,7 @@ div .fraction .control-group {
 	height:1em;
 	padding-top:1em;
 }
+.fraction ms-exponent {
+	padding-top: 6px;
+	padding-bottom: 4px;
+}
