general.css, add font-weight bold to sup or sub; o.2.2 thru problem 26

--- a/app/css/directives/general.css
+++ b/app/css/directives/general.css
@@ -179,6 +179,9 @@ div.fakeButton {
 .marginLeft80px {
 	margin-left:80px;
 }
+sup, sub {
+	font-weight:700;
+}
 /*zero out padding and margin...used in ms-group*/
 .zero td{
     margin: 0;
