--- a/app/css/directives/general.css
+++ b/app/css/directives/general.css
@@ -5,6 +5,9 @@ body {
 	font-family: sans-serif;
 	font-size:100%;
 }
+.bottomBlack {
+	border-bottom: 1px solid black;
+}
 .continuedDecimal {
 	border-top: 1px solid black;
 }
