general.css, marginLeft198px, bb.1 thru prob 8

--- a/app/css/directives/general.css
+++ b/app/css/directives/general.css
@@ -182,6 +182,9 @@ div.fakeButton {
 .marginLeft80px {
 	margin-left:80px;
 }
+.marginLeft198px {
+	margin-left:198px;
+}
 sup, sub {
 	font-weight:700;
 }
