general.css, add "marginLeft180px" rule; bb.1, corrections per Matt

--- a/app/css/directives/general.css
+++ b/app/css/directives/general.css
@@ -186,6 +186,9 @@ div.fakeButton {
 .marginLeft80px {
 	margin-left:80px;
 }
+.marginLeft180px {
+	margin-left:180px;
+}
 sup, sub {
 	font-weight:700;
 }
