general.css, restore .marg class, add tdButtonHeight50px and tdButtonHeight80px; 2A.1, 2A.2, a.1, j.1, remove spaces made unnecessary by .marg, add button height styling as appropriate; x.1, y.1, y.2, z.1, restore/add \\ins tag above buttons, add button height styling as appropriate.

--- a/app/css/directives/general.css
+++ b/app/css/directives/general.css
@@ -183,6 +183,15 @@ div.fakeButton {
 .tdButtonHeight > ms-expression > ms-row-group > table > tbody > tr > td {
 	height:60px;
 }
+.tdButtonHeight50px > ms-expression > ms-row-group > table > tbody > tr > td {
+	height:50px;
+}
+.tdButtonHeight80px > ms-expression > ms-row-group > table > tbody > tr > td {
+	height:80px;
+}
+.marg {
+	margin-right:1em;
+}
 .marginLeft80px {
 	margin-left:80px;
 }
