general.css, class marginLeft40px; bb.1, align numbered items display in help

--- a/app/css/directives/general.css
+++ b/app/css/directives/general.css
@@ -192,6 +192,9 @@ div.fakeButton {
 .marg {
 	margin-right:1em;
 }
+.marginLeft40px {
+	margin-left:40px;
+}
 .marginLeft80px {
 	margin-left:80px;
 }
