ms-panel.html, change class of expression in help panel span from 9 to 8; add style="float:right;" to <ms-controls> tag. This allows the expression in the help panel to be width span8 without creating space to the right of the controls; meanwhile the controls will no longer slide over the help text in 24.2 prob 5.

--- a/app/partials/directives/ms-panel.html
+++ b/app/partials/directives/ms-panel.html
@@ -15,8 +15,8 @@
             </span>
             <span ng-show=showHelpPanel class="{{helpPanelClass}}">
                 <div>
-                    <ms-expression expected={{helpExpression}} class=span9></ms-expression>
-                    <ms-controls data={{controls}} helpshow="{{showHelpPanel}}" class='ng-class:fixHelpClass'></ms-controls>
+                    <ms-expression expected={{helpExpression}} class=span8></ms-expression>
+                    <ms-controls data={{controls}} helpshow="{{showHelpPanel}}" class='ng-class:fixHelpClass' style="float:right;"></ms-controls>
                 </div>
             </span>
             
