general.css, add borderTopBlue; replace continuedDecimal with borderTopBlue in 24.1; 24.2 thru prob 5

--- a/app/css/directives/general.css
+++ b/app/css/directives/general.css
@@ -15,6 +15,9 @@ body {
 .continuedDecimal {
 	border-top: 1px solid black;
 }
+.borderTopBlue {
+	border-top: 1px solid #069;
+}
 .center-tr-txt{
     text-align: center;
 }
