--- a/app/css/directives/ms-div-wholes.css
+++ b/app/css/directives/ms-div-wholes.css
@@ -69,6 +69,11 @@
     position: relative;
     left: -10px;
 }
+.dividendstyleNoShift {
+    border-top: 2px solid black;
+    padding: 2px 8px 4px 18px;
+    position: relative;
+}
 
 .divisorstyleSmall {
     border-right: 2px solid black;
