--- a/app/css/directives/general.css
+++ b/app/css/directives/general.css
@@ -174,6 +174,9 @@ div.fakeButton {
 	font-size: 105%;
 	font-weight: normal;
 }
+.margin_bottom_tiny {
+	margin-bottom:6px;
+}
 .margin_bottom_small {
 	margin-bottom:20px;
 }
@@ -182,6 +185,9 @@ div.fakeButton {
 }
 .hiddenSpace {
 	visibility:hidden;
+}
+.margin_bottom_neg {
+	margin-bottom:-2px;
 }
 .tdButtonHeight > ms-expression > ms-row-group > table > tbody > tr > td {
 	height:60px;
