--- a/app/css/directives/general.css
+++ b/app/css/directives/general.css
@@ -212,6 +212,9 @@ div.fakeButton {
 .marginLeft80px {
 	margin-left:80px;
 }
+.marginLeft132px {
+	margin-left:132px;
+}
 .marginLeft180px {
 	margin-left:180px;
 }
@@ -346,6 +349,9 @@ table td .width160ValignTop {
 }
 .textAlignLeft {
 	text-align: left;
+}
+.textAlignCenter {
+	text-align: center;
 }
 .underline {
 	text-decoration:underline;
