ee.1, margin left on answer probs 1-16

--- a/app/css/directives/general.css
+++ b/app/css/directives/general.css
@@ -209,6 +209,9 @@ div.fakeButton {
 .marginLeft40px {
 	margin-left:40px;
 }
+.marginLeft60px {
+	margin-left:60px;
+}
 .marginLeft80px {
 	margin-left:80px;
 }
