--- a/app/css/directives/general.css
+++ b/app/css/directives/general.css
@@ -12,6 +12,10 @@ body {
 	padding-bottom:6px;
 	border-bottom: 1px solid black;
 }
+.bottomBluePadded {
+	padding-bottom:2px;
+	border-bottom: 1px solid #0088cc;
+}
 .continuedDecimal {
 	border-top: 1px solid black;
 }
