--- a/app/css/directives/add-subtract-multiply.css
+++ b/app/css/directives/add-subtract-multiply.css
@@ -50,6 +50,7 @@
     border-radius:0 0 1em 1em;
 }
 .border-bottom-2px-black {
+	vertical-align: bottom;
 	border-bottom:2px solid black;
 } 
 .border-bottom-with-padding {
