--- a/app/partials/directives/ms-multiplication-decimals.html
+++ b/app/partials/directives/ms-multiplication-decimals.html
@@ -37,13 +37,13 @@ table.td_padding td {
 <table>
 	<tr style="height:1.5em;">
     	<td>
-			<span ng-hide="mathdisplay">{{inenglishfirst}}|enlargeOps</span>
+			<span ng-hide="mathdisplay" ng-bind-html-unsafe=inenglishfirst|enlargeOps></span>
         </td>
         <td style="vertical-align: center;">
             <span ng-hide="mathdisplay" class="multiply-dot"> &sdot; </span>
         </td>
         <td>
-            <span ng-hide="mathdisplay">{{inenglishsecond}}|enlargeOps</span>
+            <span ng-hide="mathdisplay" ng-bind-html-unsafe=inenglishsecond|enlargeOps></span>
         </td>
     </tr>
 </table>
