--- a/app/css/directives/ms-exponent.css
+++ b/app/css/directives/ms-exponent.css
@@ -20,3 +20,6 @@ ms-exponent ms-event-label:nth-of-type(2) {
     -webkit-transform: scale(0.8);
     transform: scale(0.8);
 }
+ms-exponent input {
+	border:.5px solid #333;
+}
