partial ms-multiplication-decimals.html--remove underline from below {{sign}} (which is the multiplication sign).

--- a/app/partials/directives/ms-multiplication-decimals.html
+++ b/app/partials/directives/ms-multiplication-decimals.html
@@ -64,7 +64,7 @@ table.td_padding td {
             <td>
                 <table ng-show="mathdisplay" class="collapseTable td_padding large-font-size"  style="float:right;">
                     <tr>
-                        <td class="border-bottom-2px-black text_align_center inline-block">
+                        <td class="text_align_center inline-block">
                             <span>{{sign}}</span>
                         </td>
                         <td class="border-bottom-2px-black text_align_center inline-block" ng-repeat='col in secondArray'>
